# WGank

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/wmmou/wgank/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cn/wmmou/wgank/: App.java  BaseActivity.java  BasePresenter.java  GankConfig.java  IBaseView.java  MainActivity.java  ToolBarActivity.java
app/src/main/java/cn/wmmou/wgank/gank24k/: GankActivity.java  GankPagerApdaper.java  GankPresenter.java
app/src/main/java/cn/wmmou/wgank/gankoneday/: GankOneDayActivity.java  GankOneDayPresenter.java  IGankOneDayView.java  OneDayAdaper.java
app/src/main/java/cn/wmmou/wgank/main/: IMainView.java  MainActivity.java  MainAdaper.java  MainPresenter.java  RatioImageView.java
app/src/main/java/cn/wmmou/wgank/model/: BaseData.java  GankData.java  OneDayData.java  RestData.java  WealData.java
app/src/main/java/cn/wmmou/wgank/net/: Api.java  GankClient.java
app/src/main/res/drawable/: gradient.xml
app/src/main/res/layout/: activity_gank.xml  activity_gankoneday.xml  activity_main.xml  activity_scrolling.xml  activity_web.xml  content_main.xml  fragment_gank.xml  item_gank.xml  item_oneday.xml  item_weal.xml  oneday_scrolling.xml  view_refresh_recycler.xml  view_toolbar.xml
app/src/main/res/menu/: menu_main.xml  menu_scrolling.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/cn/wmmou/wgank/: ExampleUnitTest.java
(+16 files in other folders)
